--- a/index.html
+++ b/index.html
@@ -1,109 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Fun 3D Learning</title>
-  <style>
-    body {
-      margin:0;
-      font-family: Comic Sans MS, sans-serif;
-      background: linear-gradient(45deg,#ffecd2,#fcb69f);
-      display:flex;justify-content:center;align-items:center;
-      height:100vh;overflow:hidden;text-align:center;
-    }
-    .overlay {
-      display:flex;flex-direction:column;align-items:center;
-      gap:20px;
-    }
-    .overlay h2 {font-size:2em;color:#444;}
-    button {
-      background:#6c63ff;color:#fff;border:none;border-radius:20px;
-      padding:15px 30px;font-size:1.2em;cursor:pointer;
-      transition:transform 0.3s, background 0.3s;
-    }
-    button:hover {transform:scale(1.1) rotateY(10deg);background:#5548d9;}
-    #content.hidden {display:none;}
-    #display {
-      font-size:14vw;font-weight:bold;color:#fff;
-      text-shadow:3px 3px 10px rgba(0,0,0,0.5);
-      transition:transform 0.8s,color 0.8s;user-select:none;
-    }
-    #display:hover {transform:rotateY(20deg) rotateX(10deg) scale(1.2);}
-    .controls {
-      position:absolute;bottom:30px;display:flex;gap:40px;
-    }
-    .controls button {
-      background:#ff6b6b;border-radius:50%;width:70px;height:70px;
-      font-size:2em;box-shadow:0 5px 15px rgba(0,0,0,0.3);
-    }
-    .controls button:hover {background:#ff3b3b;}
-  </style>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+<title>Fun 3D Learning</title>
+<style>
+  html,body{
+    margin:0;overflow:hidden;height:100%;
+    font-family:Comic Sans MS,sans-serif;
+    color:#fff;user-select:none;
+  }
+  canvas{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;}
+  .menu,.overlay,.controls{position:relative;text-align:center;}
+  .menu,.overlay{display:flex;flex-direction:column;align-items:center;gap:15px;justify-content:center;height:100%;}
+  button{
+    background:#6c63ff;color:#fff;border:none;border-radius:20px;
+    padding:12px 24px;font-size:1.2em;cursor:pointer;
+    transition:transform 0.3s,background 0.3s;
+  }
+  button:hover{transform:scale(1.1);background:#5548d9;}
+  #display{
+    font-weight:bold;text-shadow:3px 3px 10px rgba(0,0,0,0.5);
+    transition:transform 0.8s,color 0.8s;
+    max-width:90vw;max-height:60vh;word-wrap:break-word;
+  }
+  #display:hover{transform:rotateY(20deg) rotateX(10deg) scale(1.1);}
+  .controls{margin-top:20px;display:flex;justify-content:center;gap:40px;}
+  .controls button{
+    width:70px;height:70px;font-size:2em;border-radius:50%;
+    background:#ff6b6b;box-shadow:0 5px 15px rgba(0,0,0,0.3);
+  }
+  .controls button:hover{background:#ff3b3b;}
+</style>
 </head>
 <body>
-  <div class="overlay" id="overlay">
-    <h2>🎉 Choose Learner 🎉</h2>
-    <button onclick="setGender('boy')">👦 Boy</button>
-    <button onclick="setGender('girl')">👧 Girl</button>
+<canvas id="bg"></canvas>
+
+<div class="menu" id="menu">
+  <h2>🌙 What do you want to learn?</h2>
+  <button onclick="chooseSet('english')">A–Z</button>
+  <button onclick="chooseSet('numbers')">1–100</button>
+  <button onclick="chooseSet('hindi')">क–ज्ञ</button>
+  <div style="margin-top:20px;">
+    <button onclick="setGender('boy')">👦 Boy Voice</button>
+    <button onclick="setGender('girl')">👧 Girl Voice</button>
   </div>
+</div>
 
-  <div id="content" class="hidden">
-    <div id="display"></div>
-    <div class="controls">
-      <button onclick="prevItem()">◀</button>
-      <button onclick="nextItem()">▶</button>
-    </div>
+<div class="overlay hidden" id="overlay">
+  <div id="display"></div>
+  <div class="controls">
+    <button onclick="prevItem()">◀</button>
+    <button onclick="nextItem()">▶</button>
   </div>
+</div>
 
-  <script>
-    let gender = "boy";
-    const english = Array.from({length:26},(_,i)=>String.fromCharCode(65+i));
-    const numbers = Array.from({length:100},(_,i)=>`${i+1}`);
-    const hindi = ["क","ख","ग","घ","ङ","च","छ","ज","झ","ञ","ट","ठ","ड","ढ","ण","त","थ","द","ध","न",
-      "प","फ","ब","भ","म","य","र","ल","व","श","ष","स","ह","क्ष","त्र","ज्ञ"];
-    const letters = [...english,...numbers,...hindi];
-    let currentIndex=0;
-    const display=document.getElementById("display");
-    const overlay=document.getElementById("overlay");
-    const content=document.getElementById("content");
+<script>
+let gender='boy',letters=[],currentIndex=0,voiceReady=false;
+const english=Array.from({length:26},(_,i)=>String.fromCharCode(65+i));
+const numbers=Array.from({length:100},(_,i)=>`${i+1}`);
+const hindi=["क","ख","ग","घ","ङ","च","छ","ज","झ","ञ","ट","ठ","ड","ढ","ण","त","थ","द","ध","न",
+"प","फ","ब","भ","म","य","र","ल","व","श","ष","स","ह","क्ष","त्र","ज्ञ"];
+const display=document.getElementById('display');
+const overlay=document.getElementById('overlay');
+const menu=document.getElementById('menu');
 
-    function randomColor(){
-      const hue=Math.floor(Math.random()*360);
-      return `hsl(${hue},80%,60%)`;
-    }
-    function setGender(g){
-      gender=g;
-      overlay.style.display="none";
-      content.classList.remove("hidden");
-      showItem();
-    }
-    function showItem(){
-      const item=letters[currentIndex];
-      display.textContent=item;
-      display.style.color=randomColor();
-      speak(item);
-    }
-    function nextItem(){
-      currentIndex=(currentIndex+1)%letters.length;
-      showItem();
-    }
-    function prevItem(){
-      currentIndex=(currentIndex-1+letters.length)%letters.length;
-      showItem();
-    }
-    function speak(text){
-      if(!window.speechSynthesis)return;
-      const utter=new SpeechSynthesisUtterance(text);
-      const voices=speechSynthesis.getVoices();
-      if(gender==="boy"){
-        utter.voice=voices.find(v=>v.name.toLowerCase().includes("male"))||voices[0];
-      }else{
-        utter.voice=voices.find(v=>v.name.toLowerCase().includes("female"))||voices[1]||voices[0];
-      }
-      speechSynthesis.cancel();
-      speechSynthesis.speak(utter);
-    }
-    speechSynthesis.onvoiceschanged=()=>speak("");
-  </script>
+function setGender(g){gender=g;alert(`Voice set: ${g}`);}
+function chooseSet(set){
+  if(set==='english')letters=[...english];
+  else if(set==='numbers')letters=[...numbers];
+  else letters=[...hindi];
+  menu.style.display='none';overlay.classList.remove('hidden');
+  currentIndex=0;showItem();
+}
+
+function randomColor(){const h=Math.floor(Math.random()*360);return`hsl(${h},80%,60%)`; }
+function showItem(){
+  const item=letters[currentIndex];
+  display.textContent=item;
+  // Resize font dynamically based on viewport
+  let size=Math.min(window.innerWidth*0.8,window.innerHeight*0.6);
+  display.style.fontSize=(size/letters[currentIndex].length)+'px';
+  display.style.color=randomColor();
+  speak(item);
+}
+function nextItem(){currentIndex=(currentIndex+1)%letters.length;showItem();}
+function prevItem(){currentIndex=(currentIndex-1+letters.length)%letters.length;showItem();}
+
+// Speech
+function speak(text){
+  if(!window.speechSynthesis)return;
+  const utter=new SpeechSynthesisUtterance(text);
+  let voices=speechSynthesis.getVoices();
+  if(!voices.length){speechSynthesis.onvoiceschanged=()=>{voiceReady=true;speak(text)};return;}
+  if(gender==='boy'){
+    utter.voice=voices.find(v=>/male|man|en-us/i.test(v.name))||voices.find(v=>v.name.toLowerCase().includes('english'))||voices[0];
+  }else{
+    utter.voice=voices.find(v=>/female|woman|en-us/i.test(v.name))||voices.find(v=>v.name.toLowerCase().includes('english'))||voices[0];
+  }
+  speechSynthesis.cancel();speechSynthesis.speak(utter);
+}
+
+// Bubble background animation
+const canvas=document.getElementById('bg'),ctx=canvas.getContext('2d');
+let bubbles=[];
+function resize(){canvas.width=window.innerWidth;canvas.height=window.innerHeight;}
+window.addEventListener('resize',resize);resize();
+
+for(let i=0;i<40;i++){
+  bubbles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,
+    r:Math.random()*6+2,dx:(Math.random()-0.5)*0.5,dy:(Math.random()-0.5)*0.5});
+}
+
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle='rgba(0,0,20,1)';ctx.fillRect(0,0,canvas.width,canvas.height);
+  bubbles.forEach(b=>{
+    ctx.beginPath();
+    ctx.arc(b.x,b.y,b.r,0,Math.PI*2);
+    ctx.fillStyle='rgba(255,255,255,0.6)';
+    ctx.fill();
+    b.x+=b.dx;b.y+=b.dy;
+    if(b.x<0||b.x>canvas.width)b.dx*=-1;
+    if(b.y<0||b.y>canvas.height)b.dy*=-1;
+  });
+  requestAnimationFrame(animate);
+}
+animate();
+</script>
 </body>
 </html>
