--- a/index.html
+++ b/index.html
@@ -1,132 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>Fun 3D Learning</title>
-<style>
-  html,body{
-    margin:0;overflow:hidden;height:100%;
-    font-family:Comic Sans MS,sans-serif;
-    color:#fff;user-select:none;
-  }
-  canvas{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;}
-  .menu,.overlay,.controls{position:relative;text-align:center;}
-  .menu,.overlay{display:flex;flex-direction:column;align-items:center;gap:15px;justify-content:center;height:100%;}
-  button{
-    background:#6c63ff;color:#fff;border:none;border-radius:20px;
-    padding:12px 24px;font-size:1.2em;cursor:pointer;
-    transition:transform 0.3s,background 0.3s;
-  }
-  button:hover{transform:scale(1.1);background:#5548d9;}
-  #display{
-    font-weight:bold;text-shadow:3px 3px 10px rgba(0,0,0,0.5);
-    transition:transform 0.8s,color 0.8s;
-    max-width:90vw;max-height:60vh;word-wrap:break-word;
-  }
-  #display:hover{transform:rotateY(20deg) rotateX(10deg) scale(1.1);}
-  .controls{margin-top:20px;display:flex;justify-content:center;gap:40px;}
-  .controls button{
-    width:70px;height:70px;font-size:2em;border-radius:50%;
-    background:#ff6b6b;box-shadow:0 5px 15px rgba(0,0,0,0.3);
-  }
-  .controls button:hover{background:#ff3b3b;}
-</style>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>Magic Letters & Numbers</title>
+  <style>
+    *{margin:0;padding:0;box-sizing:border-box}
+    html,body{width:100%;height:100%;overflow:hidden;font-family:Arial,sans-serif;background:#000;color:white}
+    #bg{position:fixed;top:0;left:0;z-index:-1}
+    #app{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;height:100vh;padding-top:40px}
+    .title{font-size:2rem;margin-bottom:20px;color:#fff;text-shadow:0 0 10px #0ff}
+    .buttons button{margin:10px;padding:12px 20px;font-size:1.2rem;border:none;border-radius:12px;background:#00bcd4;color:#fff;cursor:pointer;transition:transform .3s}
+    .buttons button:hover{transform:scale(1.1);background:#0097a7}
+    .voice-choice{margin:20px;font-size:1rem}
+    #letter-container{display:flex;align-items:center;justify-content:center;flex:1;font-size:20vw;text-shadow:0 0 20px #fff;cursor:pointer;user-select:none}
+    footer{position:fixed;bottom:10px;text-align:center;width:100%;font-size:.9rem;color:#aaa}
+  </style>
 </head>
 <body>
-<canvas id="bg"></canvas>
-
-<div class="menu" id="menu">
-  <h2>🌙 What do you want to learn?</h2>
-  <button onclick="chooseSet('english')">A–Z</button>
-  <button onclick="chooseSet('numbers')">1–100</button>
-  <button onclick="chooseSet('hindi')">क–ज्ञ</button>
-  <div style="margin-top:20px;">
-    <button onclick="setGender('boy')">👦 Boy Voice</button>
-    <button onclick="setGender('girl')">👧 Girl Voice</button>
+  <canvas id="bg"></canvas>
+  <div id="app">
+    <h1 class="title">Magic Letters & Numbers</h1>
+    <div class="buttons">
+      <button onclick="startLearning('abc')">A-Z</button>
+      <button onclick="startLearning('numbers')">1-100</button>
+      <button onclick="startLearning('hindi')">क-ज्ञ</button>
+    </div>
+    <div class="voice-choice">
+      <label><input type="radio" name="voice" value="male" checked> Boy Voice</label>
+      <label><input type="radio" name="voice" value="female"> Girl Voice</label>
+    </div>
+    <div id="letter-container" onclick="blastLetter(event)"></div>
   </div>
-</div>
+  <footer>Developed by Aayush Singh</footer>
 
-<div class="overlay hidden" id="overlay">
-  <div id="display"></div>
-  <div class="controls">
-    <button onclick="prevItem()">◀</button>
-    <button onclick="nextItem()">▶</button>
-  </div>
-</div>
+  <script>
+    // Offline service worker
+    if('serviceWorker'in navigator){
+      const swBlob=new Blob([`
+        const CACHE='magic-cache-v1';
+        const FILES=['./'];
+        self.addEventListener('install',e=>{
+          e.waitUntil(caches.open(CACHE).then(c=>c.addAll(FILES)))
+        });
+        self.addEventListener('fetch',e=>{
+          e.respondWith(caches.match(e.request).then(r=>r||fetch(e.request)))
+        });
+      `],{type:'text/javascript'});
+      const swURL=URL.createObjectURL(swBlob);
+      navigator.serviceWorker.register(swURL);
+    }
 
-<script>
-let gender='boy',letters=[],currentIndex=0,voiceReady=false;
-const english=Array.from({length:26},(_,i)=>String.fromCharCode(65+i));
-const numbers=Array.from({length:100},(_,i)=>`${i+1}`);
-const hindi=["क","ख","ग","घ","ङ","च","छ","ज","झ","ञ","ट","ठ","ड","ढ","ण","त","थ","द","ध","न",
-"प","फ","ब","भ","म","य","र","ल","व","श","ष","स","ह","क्ष","त्र","ज्ञ"];
-const display=document.getElementById('display');
-const overlay=document.getElementById('overlay');
-const menu=document.getElementById('menu');
+    // Bubbles background
+    const canvas=document.getElementById('bg'),ctx=canvas.getContext('2d');
+    let bubbles=[];
+    function resizeCanvas(){canvas.width=innerWidth;canvas.height=innerHeight;}
+    addEventListener('resize',resizeCanvas);resizeCanvas();
+    for(let i=0;i<50;i++){
+      bubbles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*5+2,dx:(Math.random()-.5)*.5,dy:(Math.random()-.5)*.5});
+    }
+    function drawBubbles(){
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+      ctx.fillStyle='rgba(255,255,255,.3)';
+      bubbles.forEach(b=>{
+        ctx.beginPath();ctx.arc(b.x,b.y,b.r,0,Math.PI*2);ctx.fill();
+        b.x+=b.dx;b.y+=b.dy;
+        if(b.x<0||b.x>canvas.width)b.dx*=-1;
+        if(b.y<0||b.y>canvas.height)b.dy*=-1;
+      });
+      requestAnimationFrame(drawBubbles);
+    }
+    drawBubbles();
 
-function setGender(g){gender=g;alert(`Voice set: ${g}`);}
-function chooseSet(set){
-  if(set==='english')letters=[...english];
-  else if(set==='numbers')letters=[...numbers];
-  else letters=[...hindi];
-  menu.style.display='none';overlay.classList.remove('hidden');
-  currentIndex=0;showItem();
-}
+    // Data sets
+    const letters='ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
+    const numbers=Array.from({length:100},(_,i)=>(i+1).toString());
+    const hindi='कखगघङचछजझञटठडढणतथदधनपफबभमयरलवशषसहक्षत्रज्ञ'.split('');
+    let currentList=[],index=0;
 
-function randomColor(){const h=Math.floor(Math.random()*360);return`hsl(${h},80%,60%)`; }
-function showItem(){
-  const item=letters[currentIndex];
-  display.textContent=item;
-  // Resize font dynamically based on viewport
-  let size=Math.min(window.innerWidth*0.8,window.innerHeight*0.6);
-  display.style.fontSize=(size/letters[currentIndex].length)+'px';
-  display.style.color=randomColor();
-  speak(item);
-}
-function nextItem(){currentIndex=(currentIndex+1)%letters.length;showItem();}
-function prevItem(){currentIndex=(currentIndex-1+letters.length)%letters.length;showItem();}
+    function startLearning(type){
+      if(type==='abc')currentList=letters;
+      else if(type==='numbers')currentList=numbers;
+      else currentList=hindi;
+      index=0;showLetter();
+    }
+    function showLetter(){
+      const container=document.getElementById('letter-container');
+      container.style.color=getRandomColor();
+      container.textContent=currentList[index];
+      speakLetter(currentList[index]);
+    }
+    function nextLetter(){index=(index+1)%currentList.length;showLetter();}
+    function getRandomColor(){return`hsl(${Math.random()*360},80%,60%)`;}
 
-// Speech
-function speak(text){
-  if(!window.speechSynthesis)return;
-  const utter=new SpeechSynthesisUtterance(text);
-  let voices=speechSynthesis.getVoices();
-  if(!voices.length){speechSynthesis.onvoiceschanged=()=>{voiceReady=true;speak(text)};return;}
-  if(gender==='boy'){
-    utter.voice=voices.find(v=>/male|man|en-us/i.test(v.name))||voices.find(v=>v.name.toLowerCase().includes('english'))||voices[0];
-  }else{
-    utter.voice=voices.find(v=>/female|woman|en-us/i.test(v.name))||voices.find(v=>v.name.toLowerCase().includes('english'))||voices[0];
-  }
-  speechSynthesis.cancel();speechSynthesis.speak(utter);
-}
+    function speakLetter(letter){
+      const voiceType=document.querySelector('input[name="voice"]:checked').value;
+      const utter=new SpeechSynthesisUtterance(letter);
+      const voices=speechSynthesis.getVoices();
+      utter.voice=voices.find(v=>voiceType==='male'?v.name.toLowerCase().includes('male')||v.name.includes('David'):v.name.toLowerCase().includes('female')||v.name.includes('Zira'))||voices[0];
+      speechSynthesis.speak(utter);
+    }
 
-// Bubble background animation
-const canvas=document.getElementById('bg'),ctx=canvas.getContext('2d');
-let bubbles=[];
-function resize(){canvas.width=window.innerWidth;canvas.height=window.innerHeight;}
-window.addEventListener('resize',resize);resize();
-
-for(let i=0;i<40;i++){
-  bubbles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,
-    r:Math.random()*6+2,dx:(Math.random()-0.5)*0.5,dy:(Math.random()-0.5)*0.5});
-}
-
-function animate(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  ctx.fillStyle='rgba(0,0,20,1)';ctx.fillRect(0,0,canvas.width,canvas.height);
-  bubbles.forEach(b=>{
-    ctx.beginPath();
-    ctx.arc(b.x,b.y,b.r,0,Math.PI*2);
-    ctx.fillStyle='rgba(255,255,255,0.6)';
-    ctx.fill();
-    b.x+=b.dx;b.y+=b.dy;
-    if(b.x<0||b.x>canvas.width)b.dx*=-1;
-    if(b.y<0||b.y>canvas.height)b.dy*=-1;
-  });
-  requestAnimationFrame(animate);
-}
-animate();
-</script>
+    function blastLetter(e){
+      if(!currentList.length)return;
+      createBlast(e.clientX,e.clientY);
+      setTimeout(nextLetter,300);
+    }
+    function createBlast(x,y){
+      for(let i=0;i<30;i++){
+        const div=document.createElement('div');
+        div.style.position='fixed';div.style.left=x+'px';div.style.top=y+'px';
+        div.style.width='8px';div.style.height='8px';
+        div.style.background=getRandomColor();
+        div.style.borderRadius='50%';div.style.pointerEvents='none';
+        document.body.appendChild(div);
+        const angle=Math.random()*2*Math.PI;
+        const distance=Math.random()*100+50;
+        const dx=Math.cos(angle)*distance;
+        const dy=Math.sin(angle)*distance;
+        div.animate([{transform:'translate(0,0)',opacity:1},{transform:`translate(${dx}px,${dy}px)`,opacity:0}],{duration:600,easing:'ease-out'});
+        setTimeout(()=>div.remove(),600);
+      }
+    }
+  </script>
 </body>
 </html>
