--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
   <title>Magic Letters & Numbers</title>
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
-    html,body{width:100%;height:100%;overflow:hidden;font-family:'Noto Sans Devanagari',Arial,sans-serif;background:#000;color:white}
+    html,body{width:100%;height:100%;overflow:hidden;font-family:'Noto Sans Devanagari',Arial,sans-serif;color:white}
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@400;700&display=swap');
-    #bg{position:fixed;top:0;left:0;z-index:-1}
-    #app{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;height:100vh;padding-top:40px}
-    .title{font-size:2rem;margin-bottom:10px;color:#fff;text-shadow:0 0 12px #0ff;text-align:center}
+    /* Background video styling */
+    #bg-video{
+      position:fixed;
+      top:0;left:0;
+      width:100%;height:100%;
+      object-fit:cover;
+      z-index:-2;
+    }
+    #bg-canvas{
+      position:fixed;
+      top:0;left:0;
+      z-index:-1;
+    }
+    #app{
+      display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
+      height:100vh;padding-top:40px;text-align:center;
+    }
+    .title{font-size:2rem;margin-bottom:10px;text-shadow:0 0 12px #0ff;}
     .buttons button{margin:8px;padding:12px 20px;font-size:1.1rem;border:none;border-radius:12px;background:#00bcd4;color:#fff;cursor:pointer;transition:transform .3s}
     .buttons button:hover{transform:scale(1.1) rotate(1deg);background:#0097a7}
-    .voice-choice,.number-lang{margin:10px;font-size:1rem;text-align:center}
+    .voice-choice,.number-lang{margin:10px;font-size:1rem;}
     .card{
       display:flex;align-items:center;justify-content:center;
       width:80vw;max-width:350px;height:50vh;max-height:300px;
@@ -27,9 +42,11 @@
     }
     .card:active{transform:rotateY(8deg) rotateX(8deg) scale(0.98);}
     #letter-container{
-      font-size:25vw;max-width:90%;text-align:center;text-shadow:0 0 25px #fff;cursor:pointer;user-select:none;
+      font-size:25vw;max-width:90%;
+      text-shadow:0 0 25px #fff;
+      cursor:pointer;user-select:none;
     }
-    footer{position:fixed;bottom:8px;text-align:center;width:100%;font-size:.85rem;color:#aaa}
+    footer{position:fixed;bottom:8px;width:100%;font-size:.85rem;color:#ddd;text-shadow:0 0 3px #000;}
     @media (max-width:600px){
       .title{font-size:1.5rem;}
       #letter-container{font-size:35vw;}
@@ -38,7 +55,14 @@
   </style>
 </head>
 <body>
-  <canvas id="bg"></canvas>
+  <!-- Fullscreen looping background video -->
+  <video id="bg-video" autoplay muted loop playsinline>
+    <source src="your-video.mp4" type="video/mp4"/>
+    <!-- Optional webm for better compression -->
+    <!-- <source src="your-video.webm" type="video/webm"/> -->
+    Your browser does not support the video tag.
+  </video>
+  <canvas id="bg-canvas"></canvas>
   <div id="app">
     <h1 class="title">Magic Letters & Numbers</h1>
     <div class="buttons">
@@ -63,11 +87,11 @@
   <footer>Developed by Aayush Singh</footer>
 
   <script>
-    // Offline service worker
+    // Offline Service Worker
     if('serviceWorker' in navigator){
       const swBlob=new Blob([`
-        const CACHE='magic-cache-v3';
-        const FILES=['./'];
+        const CACHE='magic-cache-v4';
+        const FILES=['./','your-video.mp4'];
         self.addEventListener('install',e=>e.waitUntil(caches.open(CACHE).then(c=>c.addAll(FILES))));
         self.addEventListener('fetch',e=>e.respondWith(caches.match(e.request).then(r=>r||fetch(e.request))));
       `],{type:'text/javascript'});
@@ -75,8 +99,8 @@
       navigator.serviceWorker.register(swURL);
     }
 
-    // Bubbles
-    const canvas=document.getElementById('bg'),ctx=canvas.getContext('2d');
+    // Bubbles over video
+    const canvas=document.getElementById('bg-canvas'),ctx=canvas.getContext('2d');
     let bubbles=[];
     function resizeCanvas(){canvas.width=innerWidth;canvas.height=innerHeight;}
     addEventListener('resize',resizeCanvas);resizeCanvas();
@@ -121,14 +145,11 @@
       const voiceType=document.querySelector('input[name="voice"]:checked').value;
       const numLang=document.querySelector('input[name="numLang"]:checked')?.value||'en';
       const utter=new SpeechSynthesisUtterance(letter);
-
       if(currentType==='numbers'){
         utter.lang=(numLang==='hi')?'hi-IN':'en-US';
       }else if(/[क-ह]/.test(letter)){
         utter.lang='hi-IN';
-      }else{
-        utter.lang='en-US';
-      }
+      }else utter.lang='en-US';
 
       const voices=speechSynthesis.getVoices();
       utter.voice=voices.find(v=>voiceType==='male'?v.name.toLowerCase().includes('male')||v.name.includes('David'):v.name.toLowerCase().includes('female')||v.name.includes('Zira'))||voices[0];
@@ -145,18 +166,14 @@
       for(let i=0;i<25;i++){
         const div=document.createElement('div');
         div.style.position='fixed';
-        div.style.left=x+'px';
-        div.style.top=y+'px';
-        div.style.width='10px';
-        div.style.height='10px';
+        div.style.left=x+'px';div.style.top=y+'px';
+        div.style.width='10px';div.style.height='10px';
         div.style.background=getRandomColor();
-        div.style.borderRadius='50%';
-        div.style.pointerEvents='none';
+        div.style.borderRadius='50%';div.style.pointerEvents='none';
         document.body.appendChild(div);
         const angle=Math.random()*2*Math.PI;
         const distance=Math.random()*100+50;
-        const dx=Math.cos(angle)*distance;
-        const dy=Math.sin(angle)*distance;
+        const dx=Math.cos(angle)*distance,dy=Math.sin(angle)*distance;
         div.animate([{transform:'translate(0,0)',opacity:1},{transform:`translate(${dx}px,${dy}px)`,opacity:0}],{duration:700,easing:'ease-out'});
         setTimeout(()=>div.remove(),700);
       }
