--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <!-- Fullscreen looping background video -->
   <video id="bg-video" autoplay muted loop playsinline>
-    <source src="your-video.mp4" type="video/mp4"/>
+    <source src="VID_20250919_150128_178.mp4" type="video/mp4"/>
     <!-- Optional webm for better compression -->
     <!-- <source src="your-video.webm" type="video/webm"/> -->
     Your browser does not support the video tag.
@@ -91,7 +91,7 @@
     if('serviceWorker' in navigator){
       const swBlob=new Blob([`
         const CACHE='magic-cache-v4';
-        const FILES=['./','your-video.mp4'];
+        con'];
         self.addEventListener('install',e=>e.waitUntil(caches.open(CACHE).then(c=>c.addAll(FILES))));
         self.addEventListener('fetch',e=>e.respondWith(caches.match(e.request).then(r=>r||fetch(e.request))));
       `],{type:'text/javascript'});
