--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
   <footer>
     <span>Developed by Aayush Singh</span>
-    <img src="developer.jpg" alt="Developer"/>
+    <img src="Aayush photo.jpg" alt="Developer"/>
   </footer>
 
   <script>
