--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
     </div>
     <button id="play-btn" onclick="togglePlay()">▶ Play All</button>
   </div>
+  <div id="help-window">
+  <div class="help-content">
+    <h2>Welcome to Magic Letters & Numbers!</h2>
+    <ul>
+      <li>🎨 Tap the big letter/number to move to the next one with effects.</li>
+      <li>▶ Use "Play All" to autoplay through all letters or numbers.</li>
+      <li>🔊 Choose a voice (Boy/Girl) and number language (English/Hindi).</li>
+      <li>🎉 Special effects & compliments on milestones (10, 20, 50, etc.).</li>
+    </ul>
+    <button id="close-help">Got it!</button>
+  </div>
+  </div>
+
   <footer>
     <span>Developed by Aayush Singh</span>
     <img src="Aayush photo.jpg" alt="Developer"/>
@@ -201,5 +214,73 @@
       document.getElementById('play-btn').textContent='▶ Play All';
     }
   </script>
+<!-- ✅ Add this block at the very end of your HTML, just before </body> -->
+<!-- Floating Help Window -->
+<div id="help-window">
+  <div class="help-content">
+    <h2>Welcome to Magic Letters & Numbers!</h2>
+    <ul>
+      <li>🎨 Tap the big letter/number to see effects and move forward.</li>
+      <li>▶ Use "Play All" to autoplay through all letters or numbers.</li>
+      <li>🔊 Choose a voice (Boy/Girl) and number language (English/Hindi).</li>
+      <li>🎉 Enjoy special compliments and color blasts at milestones!</li>
+    </ul>
+    <button id="close-help">Got it!</button>
+  </div>
+</div>
+
+<style>
+#help-window {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+.help-content {
+  background: #fff;
+  color: #000;
+  padding: 20px;
+  border-radius: 15px;
+  max-width: 90%;
+  width: 400px;
+  text-align: left;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+  animation: pop-in .4s ease;
+}
+.help-content h2 {margin-bottom:10px;color:#00bcd4;}
+.help-content ul {padding-left:20px;margin-bottom:15px;}
+#close-help {
+  background:#00bcd4;color:white;border:none;
+  padding:10px 20px;border-radius:8px;cursor:pointer;
+}
+#close-help:hover {background:#0097a7;}
+@keyframes pop-in {
+  0% {transform:scale(0.7);opacity:0;}
+  100% {transform:scale(1);opacity:1;}
+}
+</style>
+
+<script>
+// Show floating window only once per device
+document.addEventListener('DOMContentLoaded', () => {
+  const shown = localStorage.getItem('helpShown');
+  const helpWindow = document.getElementById('help-window');
+  const closeBtn = document.getElementById('close-help');
+  if (!shown) {
+    helpWindow.style.display = 'flex';
+  } else {
+    helpWindow.style.display = 'none';
+  }
+  closeBtn.addEventListener('click', () => {
+    helpWindow.style.display = 'none';
+    localStorage.setItem('helpShown', 'true');
+  });
+});
+</script>
+<!-- ✅ End Floating Help Window -->
 </body>
 </html>
